# openai-folder-sync

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust-ci.yml
src/: git.rs  local.rs  main.rs  openai.rs
