[package]
name = "openai-folder-sync"
version = "0.1.0"
edition = "2024"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "MIT OR Apache-2.0"
description = "CLI tool for syncing files with the OpenAI vector store."

[dependencies]
tokio = { version = "1", features = ["full"] }
async-openai = { version = "0.30" }
clap = { version = "4", features = ["env","derive"] }
md-5 = "0.10.5"
indicatif = "0.18"